# obsidian-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  justfile  pyproject.toml  release.toml
.github/workflows/: ci.yml  release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: e2e-testing.md
docs/plans/: 2026-03-06-obsidian-mcp-design.md  2026-03-06-obsidian-mcp-implementation.md  2026-03-07-e2e-real-api-design.md  2026-03-07-e2e-real-api-implementation.md  2026-03-07-patch-v3-headers-design.md  2026-03-07-patch-v3-headers-implementation.md  2026-03-09-stdio-transport-design.md  2026-03-09-stdio-transport-implementation.md
openspec/changes/archive/2026-03-09-add-stdio-transport/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-add-stdio-transport/specs/transport/: spec.md
openspec/changes/archive/2026-03-09-migrate-to-python/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-09-migrate-to-python/specs/client/: spec.md
openspec/changes/archive/2026-03-09-migrate-to-python/specs/server/: spec.md
openspec/changes/archive/2026-03-09-migrate-to-python/specs/transport/: spec.md
openspec/changes/archive/2026-03-09-migrate-to-python/specs/types/: spec.md
openspec/specs/client/: spec.md
openspec/specs/server/: spec.md
openspec/specs/transport/: spec.md
openspec/specs/types/: spec.md
src/: client.rs  error.rs  main.rs  server.rs  types.rs
src/obsidian_mcp/: __init__.py  __main__.py  client.py  errors.py  server.py  types.py
tests/: integration_test.rs  test_client.py  test_e2e.py  test_errors.py  test_main.py  test_server.py  test_stdio.rs  test_types.py
