[package]
name = "obsidian-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.12", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
