[project]
name = "obsidian-mcp"
version = "0.1.0"
description = "MCP server for Obsidian vault operations via Local REST API"
readme = "README.md"
authors = [
    { name = "Dustin Liu", email = "liu.minlun@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.28.0",
    "click>=8.1.0",
]

[project.scripts]
obsidian-mcp = "obsidian_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.coverage.run]
source = ["obsidian_mcp"]
omit = ["src/obsidian_mcp/__main__.py"]

[tool.coverage.report]
fail_under = 85
